hphp/test/zend/good/tests/lang/type_hints_001.php.expectf

Catchable fatal error: Argument 1 passed to type_hint_foo() must be an instance of Foo, Bar given in %s/type_hints_001.php on line 16
